tearing solved by flex wrap over everything

--- a/burger.css
+++ b/burger.css
@@ -8,11 +8,16 @@ body {
 }
 
 .header-logo {
+    /* margin-left: 80px; */
   width: 80px;
   height: 80px;
 }
 
 .navbar {
+
+    display: flex;
+    flex-wrap: wrap;
+
   font-family: "flame-regular";
 }
 
@@ -86,6 +91,15 @@ body {
   transform: scaleY(0.9);
 }
 
+.card-title {
+  margin-left: 110px;
+}
+
+.menu-section {
+  font-family: "flame-regular";
+  font-size: 18px;
+}
+
 .menu-background {
   width: 100%;
   height: 350px;
@@ -94,68 +108,122 @@ body {
 .menu-images {
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: space-around; */
-  /* margin-left: 100px;
-  margin-right: 113px; */
+  justify-content: space-around;
+  margin-left: 100px;
+  margin-right: 113px;
 }
-
-
-
-
 
 /* IMAGE DIV STARTS FROM HERE BELOW */
 
 .img-1-div {
-    width: 114px;
-    text-align: center;
-  }
-  
-  .img-2-div {
-    width: 114px;
-    text-align: center;
-  }
-  
-  .img-3-div {
-    width: 114px;
-    text-align: center;
-  }
-  
-  .img-4-div {
-    width: 114px;
-    text-align: center;
-  }
-  
-  .img-5-div {
-    width: 114px;
-    text-align: center;
-  }
-  
-  .img-6-div {
-    width: 114px;
-    text-align: center;
-  }
-  
-  .img-7-div {
-    width: 114px;
-    text-align: center;
-  }
-  
-  .img-8-div {
-    width: 114px;
-    text-align: center;
-  }
-  
-  .img-9-div {
-    width: 120px;
-    text-align: center;
-  }
-  
+  width: 114px;
+  text-align: center;
+}
 
+.img-2-div {
+  width: 114px;
+  text-align: center;
+}
 
+.img-3-div {
+  width: 114px;
+  text-align: center;
+}
 
+.img-4-div {
+  width: 114px;
+  text-align: center;
+}
 
+.img-5-div {
+  width: 114px;
+  text-align: center;
+}
 
-  /* IMAGE DIV ENDS  HERE */
+.img-6-div {
+  width: 114px;
+  text-align: center;
+}
 
+.img-7-div {
+  width: 114px;
+  text-align: center;
+}
 
-  
+.img-8-div {
+  width: 114px;
+  text-align: center;
+}
+
+.img-9-div {
+  width: 120px;
+  text-align: center;
+}
+
+/* IMAGE DIV ENDS  HERE */
+
+.img-1 {
+  width: 114px;
+  height: 112px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.img-2 {
+  width: 114px;
+  height: 112px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.img-3 {
+  width: 114px;
+  height: 112px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.img-4 {
+  width: 114px;
+  height: 112px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.img-5 {
+  width: 114px;
+  height: 112px;
+
+  background-color: white;
+  border-radius: 5px;
+}
+
+.img-6 {
+  width: 114px;
+  height: 112px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.img-7 {
+  width: 114px;
+  height: 112px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.img-8 {
+  width: 114px;
+  height: 112px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.img-9 {
+  width: 114px;
+  height: 112px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+/* IMAGE ELEMENTS ENDS HERE BELOW */
